--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,8 @@
   "browser_action": {
     "default_popup": "index.html"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content_script.js"]
-    }
-  ]
+  "background": {
+    "scripts": ["background.js"]
+  },
+  "permissions": ["webRequest", "webRequestBlocking", "storage", "<all_urls>"]
 }
