--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^8.0.0",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.41",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.1",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
@@ -24,7 +27,7 @@
     "build": "npm run typecheck && npm run format && webpack --mode=production",
     "format": "prettier -w src/* public/*",
     "typecheck": "tsc -p . --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "ragnar",
   "license": "ISC"
