--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,15 @@
   "[typescript]": {
     "editor.tabSize": 2
   },
+  "[javascript]": {
+    "editor.tabSize": 2
+  },
   "[json]": {
     "editor.tabSize": 2,
     "editor.quickSuggestions": {
       "strings": true
     },
     "editor.suggest.insertMode": "replace"
-  }
+  },
+  "css.validate": false
 }
