--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14-slim
 
 RUN apt update && \
-    apt install -y --no-install-recommends git
+    apt install -y --no-install-recommends git ssh
 
 WORKDIR /app
 COPY . app
