.devcontainer add ssh settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,9 @@
     "pkief.material-icon-theme",
     "esbenp.prettier-vscode"
   ],
+  "mounts": [
+    "source=${localEnv:HOME}/.ssh,target=/home/node/.ssh,type=bind,consistency=cached"
+  ],
 
   "postCreateCommand": "npm i",
 
