--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,7 @@ FROM node:14-slim
 
 RUN apt update && \
     apt install -y --no-install-recommends git ssh
+RUN npm i -g npm
 
 WORKDIR /app
 COPY . app
