--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,10 @@ jobs:
         run: npm ci
 
       - name: Build package
-        run: npm run dev && npm run zip
+        run: npm run dev
 
       - name: Upload package
         uses: actions/upload-artifact@v2
         with:
           name: uamod
-          path: uamod.zip
+          path: dist/*
